--- a/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -17,6 +17,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "![imagen](./img/ejercicio_markdown.png)"
    ]
@@ -32,6 +37,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Otra celda\n",
+    "\n",
+    "# Otra celda"
+   ]
   },
   {
    "attachments": {},
