--- a/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -36,7 +36,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Lo más importante**\n",
+    "\n",
+    "- Matemáticas\n",
+    "- Python\n",
+    "- SQL\n",
+    "\n",
+    "![imagen](./img/python.png)\n",
+    "\n",
+    "Otro tema importante es el *Business Intelligence*\n",
+    "\n",
+    "Si tienes dudas, puedes escribirme a: <miguel.nievas@thebrigeschool.es>\n",
+    "\n",
+    "\n",
+    "En esta página se aprende mucho de machine learning: [**página con ML**](https://www.ibm.com/es-es/topics/machine-learning)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +86,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "| **Ramp up** | **Data Analysis** | **Machine Learning** | **Data & Business** |\n",
+    "|-------------|-------------------|----------------------|---------------------|\n",
+    "|Python       |EDA                |Supervised            |Productivización     |\n",
+    "|Estadística  |R                  |Non supervised        |Storytelling         |\n",
+    "|SQL          |Feat.Eng.          |Deep learning         |API                  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\sqrt{3x-1}+(1+x)^2$"
+   ]
   }
  ],
  "metadata": {
