--- a/1-RampUp/Python/0-Markdown/Teoria/Markdown_Jupyter.ipynb
+++ b/1-RampUp/Python/0-Markdown/Teoria/Markdown_Jupyter.ipynb
@@ -39,6 +39,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Acabo de tomar control de este notebook. \n",
+    "**Y esto va a ir en negrita**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![imagen](img/primer_celda.png)"
    ]
   },
@@ -66,14 +74,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola mundo\n"
+      "Hola mundo Mikel\n"
      ]
     }
    ],
    "source": [
     "# Se muestra por pantalla \"Hola mundo\"\n",
     "# print(\"Otra linea de codigo\")\n",
-    "print(\"Hola mundo\")\n"
+    "print(\"Hola mundo Mikel\")\n"
    ]
   },
   {
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +277,7 @@
        "'Esto es codigo de Python'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
