--- a/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\sqrt{3x-1}+(1+x)^2$"
+    "$$\\sqrt{3x-1}+(1+x)^2$$"
    ]
   }
  ],
