Ejercico Basics I y otros

--- a/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-RampUp/Python/0-Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -37,29 +37,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Lo más importante**\n",
+    "> **Lo más importante**\n",
+    ">\n",
+    "> - Matemáticas\n",
+    "> - Python\n",
+    "> - SQL\n",
+    ">\n",
+    "> ![imagen](./img/python.png)\n",
+    ">\n",
+    "> Otro tema importante es el *Business Intelligence*\n",
+    ">\n",
+    "> Si tienes dudas, puedes escribirme a: <miguel.nievas@thebrigeschool.es>\n",
+    ">\n",
+    ">\n",
+    "> En esta página se aprende mucho de machine learning: [**página con ML**](https://www.ibm.com/es-es/topics/machine-learning)\n",
     "\n",
-    "- Matemáticas\n",
-    "- Python\n",
-    "- SQL\n",
-    "\n",
-    "![imagen](./img/python.png)\n",
-    "\n",
-    "Otro tema importante es el *Business Intelligence*\n",
-    "\n",
-    "Si tienes dudas, puedes escribirme a: <miguel.nievas@thebrigeschool.es>\n",
-    "\n",
-    "\n",
-    "En esta página se aprende mucho de machine learning: [**página con ML**](https://www.ibm.com/es-es/topics/machine-learning)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Otra celda\n",
-    "\n",
-    "# Otra celda"
+    "### > esto se pone para el formato de la celda de la izquierda"
    ]
   },
   {
@@ -81,17 +74,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Para aliniar a la derecha poner : al final del separador."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center>\n",
+    "\n",
     "| **Ramp up** | **Data Analysis** | **Machine Learning** | **Data & Business** |\n",
-    "|-------------|-------------------|----------------------|---------------------|\n",
+    "|-------------|------------------:|----------------------|---------------------|\n",
     "|Python       |EDA                |Supervised            |Productivización     |\n",
     "|Estadística  |R                  |Non supervised        |Storytelling         |\n",
-    "|SQL          |Feat.Eng.          |Deep learning         |API                  |"
+    "|SQL          |Feat.Eng.          |Deep learning         |API                  |\n",
+    "\n",
+    "</center>"
    ]
   },
   {
