Terminado ejercicio Basics II

--- a/1-RampUp/Python/1-Basics/Practica/Ejercicios_Basics_I.ipynb
+++ b/1-RampUp/Python/1-Basics/Practica/Ejercicios_Basics_I.ipynb
@@ -26,6 +26,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta magnífica tecnología científica, \n",
+      "\tque ahorra trabajo y nos hace la vida mas fácil, \n",
+      "\t\tnos aporta tan poca felicidad? \n",
+      "\t\t\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino. \n",
+      "\"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"¿Por qué esta magnífica tecnología científica, \\n\\tque ahorra trabajo y nos hace la vida mas fácil, \\n\\t\\tnos aporta tan poca felicidad? \\n\\t\\t\\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino. \\n\\\"Albert Einstein\\\"\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -56,17 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calle Zuloaga 5 Bilbao 48015\n"
+     ]
+    }
+   ],
+   "source": [
+    "calle = \"calle Zuloaga\"\n",
+    "numero = 5\n",
+    "ciudad = \"Bilbao\"\n",
+    "codigo_postal = 48015\n",
+    "print(calle,numero,ciudad,codigo_postal)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calle Zuloaga 5 Bilbao 48015 España\n"
+     ]
+    }
+   ],
+   "source": [
+    "pais = \"España\"\n",
+    "print(calle,numero,ciudad,codigo_postal,pais)"
+   ]
   },
   {
    "cell_type": "code",
@@ -85,10 +132,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zuloaga 6 Bilbao 48013\n"
+     ]
+    }
+   ],
+   "source": [
+    "calle = input(\"¿Cómo se llama la calle de tu domicilio?\")\n",
+    "numero = input(\"¿Cuál es el número de la calle?\")\n",
+    "ciudad = input(\"¿En qué ciudad vives?\")\n",
+    "codigo_postal = input(\"¿Cuál es el código postal\")\n",
+    "print (calle,numero,ciudad,codigo_postal)"
+   ]
   },
   {
    "cell_type": "code",
@@ -117,56 +178,123 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Está bien, aunque la tilde podría dar problemas pero en este caso está como texto.\n",
+    "2. falta cerrar comilla\n",
+    "3. True puede que esté reservada como para ser una variable\n",
+    "4. Existe un espacio en el nombre de la variable\n",
+    "5. Import es una de las palabra que ya están reservadas\n",
+    "6. El nombre de la variable no puede empezar con un número, al final si que podría tener\n",
+    "7. Está bien"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mi_variable = \"Economía\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (2439014879.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31motra_var = \"Ejercicio\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "otra_var = \"Ejercicio"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to True (2807537446.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mTrue = \"Ejercicio\"\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m cannot assign to True\n"
+     ]
+    }
+   ],
+   "source": [
+    "True = \"Ejercicio\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (568631341.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmi variab1e = \"Alpha\"\u001b[39m\n       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi variab1e = \"Alpha\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1456137638.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport = 40\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import = 40"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (3077410335.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m81mi_variable = \"Agua\"\u001b[39m\n     ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid decimal literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "81mi_variable = \"Agua\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mi_variable10 = 6"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,10 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La temperatura en Fahrenheit es 77.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = int(input(\"¿Cuál es la temperatura en Celcius?\"))\n",
+    "F = C * (9/5) + 32\n",
+    "print(\"La temperatura en Fahrenheit es\", F) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +338,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Se utiliza la sentencia input para recibir el valor de la temperatura en celcius por parte del usuario. Dicho valor se guarda en la variable C\n",
+    "# Es importante convertir el input recibido (string) a integer para que luego pueda ser incluido en la formula. \n",
+    "# Se crea una variable F donde se realizará la conversión de los grados celcius a Farenheit mediante la formula\n",
+    "# Por ultiomo se crea una imprime la respuesta de la temperatura en Farenheit con un texto\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -273,11 +418,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
   }
  },
  "nbformat": 4,
