--- a/1-RampUp/Python/1-Basics/Practica/Ejercicios_Basics_I.ipynb
+++ b/1-RampUp/Python/1-Basics/Practica/Ejercicios_Basics_I.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,8 @@
    ],
    "source": [
     "print(\"¿Por qué esta magnífica tecnología científica, \\n\\tque ahorra trabajo y nos hace la vida mas fácil, \\n\\t\\tnos aporta tan poca felicidad? \\n\\t\\t\\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino. \\n\\\"Albert Einstein\\\"\")\n",
+    "\n",
+    "# Correc. Es importante añadir \\ para que no cuente los \" como el final del print\n",
     "\n"
    ]
   },
