--- a/1-RampUp/Python/1-Basics/Teoria/Basics_II.ipynb
+++ b/1-RampUp/Python/1-Basics/Teoria/Basics_II.ipynb
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1566,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 18, 21, 22, 25, 26, 29]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Esto es con funciones Build in\n",
+    "temperaturas_ordenadas = sorted(temperaturas)\n",
+    "temperaturas_ordenadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1575,13 +1597,13 @@
        "[29, 26, 25, 22, 21, 18, 17]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(temperaturas,reverse=True)"
+    "temperaturas"
    ]
   },
   {
@@ -1589,7 +1611,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#vemos como la lista temperaturas no nos lo ha cambiado. La lista no la toca, nos de vuelve la otra lista. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#con la funcion de temperaturas.sort sí que nos llega a modificar la lista original. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temperaturas.sort(reverse=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1628,6 +1670,46 @@
    "source": [
     "print(type(temperaturas))\n",
     "print(type(temperaturas[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperaturas[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperaturas[6]"
    ]
   },
   {
@@ -1686,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1779,8 @@
       "string de ejemplo\n",
       "String dE EjEmplo\n",
       "['String', 'de', 'ejemplo']\n",
-      "2\n"
+      "2\n",
+      "['5', '6']\n"
      ]
     }
    ],
@@ -1718,7 +1801,64 @@
     "\n",
     "print(string_ejemplo.split(' '))\n",
     "\n",
-    "print(string_ejemplo.index('r'))"
+    "print(string_ejemplo.index('r'))\n",
+    "\n",
+    "coordenadas = \"5,6\"\n",
+    "print(coordenadas.split(\",\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S',\n",
+       " 't',\n",
+       " 'r',\n",
+       " 'i',\n",
+       " 'n',\n",
+       " 'g',\n",
+       " ' ',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " ' ',\n",
+       " 'e',\n",
+       " 'j',\n",
+       " 'e',\n",
+       " 'm',\n",
+       " 'p',\n",
+       " 'l',\n",
+       " 'o']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(string_ejemplo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String de ejemplo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Los strings no son mutables\n",
+    "print(string_ejemplo)"
    ]
   },
   {
@@ -2247,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2257,6 +2397,7 @@
       "4\n",
       "None\n",
       "['Mates', 'Fisica', 'Mates', 'Ingles', 'Quimica']\n",
+      "['Mates', 'Fisica', 'Mates', 'Ingles', 'Quimica', 'Castellano']\n",
       "3\n",
       "2\n",
       "None\n",
@@ -2268,7 +2409,13 @@
     "asignaturas = [\"Mates\", \"Fisica\", \"Mates\", \"Ingles\"]\n",
     "print(len(asignaturas))\n",
     "\n",
+    "# es un metodo, no imprime nada\n",
     "print(asignaturas.append(\"Quimica\"))\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Lo que habría que hacer es \n",
+    "\n",
+    "asignaturas.append(\"Castellano\")\n",
     "print(asignaturas)\n",
     "\n",
     "print(asignaturas.index(\"Ingles\"))\n",
@@ -2354,6 +2501,99 @@
     "         \n",
     " </td></tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Snatch', 'Taxi driver', 'El gran Lebowski']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Peliculas = [\"Snatch\",\"Taxi driver\",\"El gran Lebowski\"]\n",
+    "print(Peliculas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Snatch', 'Taxi driver', 'El gran Lebowski', 'Californication', 'Twin Peaks', 'Simpson']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Series = [\"Californication\", \"Twin Peaks\", \"Simpson\"]\n",
+    "Peliculas_series = Peliculas + Series\n",
+    "print (Peliculas_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Taxi driver'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Peliculas_series.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Snatch', 'El gran Lebowski', 'Californication', 'Twin Peaks', 'Simpson']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Peliculas_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Snatch', ['Tortilla patatas', 'Huevos Fritos', 'Ensalada'], 'El gran Lebowski', 'Californication', 'Twin Peaks', 'Simpson']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_platoscomida = [\"Tortilla patatas\", \"Huevos Fritos\", \"Ensalada\"]\n",
+    "Peliculas_series.insert(1,lista_platoscomida)\n",
+    "print(Peliculas_series)"
    ]
   },
   {
@@ -2515,9 +2755,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operaciones matemáticas\n",
+      "10\n",
+      "18\n",
+      "16\n",
+      "2.0\n",
+      "1\n",
+      "1024\n",
+      "5.0\n",
+      "\n",
+      "Operaciones comparativas\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "\n",
+      "Operaciones con booleanos\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "\n",
+      "Funciones built-in\n",
+      "FIN DEL NOTEBOOK\n",
+      "fin del notebook\n",
+      "Fin del nOtebOOk\n",
+      "Fin del ntebk\n",
+      "\n",
+      "Listas\n",
+      "['AC/DC', 'Metallica', 'Nirvana', 'Queen']\n"
+     ]
+    }
+   ],
    "source": [
     "# Operaciones matemáticas\n",
     "print(\"Operaciones matemáticas\")\n",
