--- a/1-RampUp/Python/2-Flujos de control/Practica/Ejercicios_Flujos_Control_MikelResueltoejercicio9_correcionclase.ipynb
+++ b/1-RampUp/Python/2-Flujos de control/Practica/Ejercicios_Flujos_Control_MikelResueltoejercicio9_correcionclase.ipynb
@@ -87,15 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La casa cuenta con una superfice de 60.0\n",
-      "La casa se encuentra en el distrito de Retiro\n",
+      "La casa cuenta con una superfice de 200.0\n",
+      "La casa se encuentra en el distrito de Salamanca\n",
       "El precio de la casa es 0\n"
      ]
     }
@@ -107,8 +107,8 @@
     "\n",
     "print(\"La casa cuenta con una superfice de\", superficie)\n",
     "print(\"La casa se encuentra en el distrito de\", distrito)\n",
-    "\n",
-    "if distrito == \"Moncloa\" or \"Centro\" and superficie > 100:\n",
+    "# Importante escribirlo de esta manera y no distrito == \"Moncloa\" or \"Centro\". Ya que primero hará distrito ==\"Moncloa\" (true or false segun lo que metamos) y la otra comprobación la sacará siempre true porque esta haciendo un if Centro. \n",
+    "if distrito == \"Moncloa\" or distrito == \"Centro\" and superficie > 100:\n",
     "    print(\"El precio de la casa es de 1000\")\n",
     "elif distrito == \"Salamanca\" and superficie < 150:\n",
     "    print(\"El precio de la casa es de 1500\")\n",
@@ -282,10 +282,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-10, -9, -8, -7, -6, -5, -4, -3, -2, -1]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Otra forma Hegoi\n",
+    "\n",
+    "list(range(-10,0))"
+   ]
   },
   {
    "cell_type": "code",
@@ -308,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +348,7 @@
     "    if i % 5 == 0:\n",
     "        print(i)\n",
     "        \n",
-    "    "
+    "# El break sirve para dejar de ejecutar un bucle, lo lógico es que tenga una condición delante. También se podría resolver con un while. Aunque en otros lenguajes de programación el break está \"satanizado\" en Python sí que se utiliza.    "
    ]
   },
   {
@@ -434,7 +449,7 @@
     }
    ],
    "source": [
-    "#primer intento, no he conseguido ya que el x no lo considera como una lista. \n",
+    "#primer intento, no he conseguido ya que el x no lo considera como una lista. Ignorar\n",
     "\n",
     "x = reversed(range(1,6))\n",
     "lista = list(x)\n",
@@ -482,17 +497,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Hegoi\n",
+    "\n",
+    "lista_8 = list(range(5,0,-1))\n",
+    "print(lista_8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "[5, 4, 3, 2, 1]\n",
+      "[5, 4, 3, 2, 1]\n",
+      "[5, 4, 3, 2, 1]\n",
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in lista_8:\n",
+    "    print(lista_8)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# En la grabación de la clase se ve la explicación\n",
+    "\n",
+    "for i in lista_8:\n",
+    "    for j in (range(i,0,-1)):\n",
+    "        print(j, end= \" \")\n",
+    "    print(\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -511,11 +580,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#no"
+    "#no\n",
+    "#tenemos que importar la libreria \n",
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Respuesta incorrecta, te quedan 1 vidas\n",
+      "You win!! Has acertado el número\n"
+     ]
+    }
+   ],
+   "source": [
+    "# De esta manera no da bien, vamos a probar de otra manera\n",
+    "\n",
+    "vidas = 2\n",
+    "numero_random = random.randint(1,5)\n",
+    "print(numero_random)\n",
+    "\n",
+    "while vidas > 0:\n",
+    "    numero_usuario = int(input (\"Adivina el número del 1 al 5\"))\n",
+    "    #print(numero_usuario)\n",
+    "    if numero_random == numero_usuario:\n",
+    "        print(\"You win!! Has acertado el número\")\n",
+    "        break\n",
+    "    else:\n",
+    "        vidas = vidas - 1\n",
+    "        print(\"Respuesta incorrecta, te quedan\", vidas, \"vidas\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"You lose\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Respuesta incorrecta, te quedan 1 vidas\n",
+      "Respuesta incorrecta, te quedan 0 vidas\n",
+      "You lose\n",
+      "5\n",
+      "Respuesta incorrecta, te quedan 1 vidas\n",
+      "You win!! Has acertado el número\n",
+      "2\n",
+      "Respuesta incorrecta, te quedan 1 vidas\n",
+      "Respuesta incorrecta, te quedan 0 vidas\n",
+      "You lose\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tengo que revisarlo, estamos intentado hacer que siga jugando si queremos. Ya lo he revisado entiendo que está bien. Se podría mejorar en otra versión preguntando si aunque acierte quiere seguir jugando o no. \n",
+    "\n",
+    "jugar = True\n",
+    "while jugar:\n",
+    "    vidas = 2\n",
+    "    numero_random = random.randint(1,5)\n",
+    "    print(numero_random)\n",
+    "    while vidas > 0:\n",
+    "        numero_usuario = int(input (\"Adivina el número del 1 al 5\"))\n",
+    "        #print(numero_usuario)\n",
+    "        if numero_random == numero_usuario:\n",
+    "            print(\"You win!! Has acertado el número\")\n",
+    "            break\n",
+    "        else:\n",
+    "            vidas = vidas - 1\n",
+    "            print(\"Respuesta incorrecta, te quedan\", vidas, \"vidas\")\n",
+    "    else:\n",
+    "        print(\"You lose\")\n",
+    "        decision = input(\"¿Quieres volver a jugar(Sí/No?\")\n",
+    "        if decision == \"No\":\n",
+    "            jugar = False\n",
+    "        "
    ]
   },
   {
@@ -523,14 +678,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jugar = True\n",
+    "while jugar:\n",
+    "    vidas = 2\n",
+    "    numero_random = random.randint(1,5)\n",
+    "    print(numero_random)\n",
+    "    while vidas > 0:\n",
+    "        numero_usuario = int(input (\"Adivina el número del 1 al 5\"))\n",
+    "        #print(numero_usuario)\n",
+    "        if numero_random == numero_usuario:\n",
+    "            print(\"You win!! Has acertado el número\")\n",
+    "            break\n",
+    "        else:\n",
+    "            vidas = vidas - 1\n",
+    "            print(\"Respuesta incorrecta, te quedan\", vidas, \"vidas\")\n",
+    "    else:\n",
+    "        print(\"You lose\")\n",
+    "        decision = input(\"¿Quieres volver a jugar(Sí/No?\")\n",
+    "        if decision == \"No\":\n",
+    "            jugar = False"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "Respuesta incorrecta, te quedan 1 vidas\n",
+      "5\n",
+      "Respuesta incorrecta, te quedan 0 vidas\n"
+     ]
+    }
+   ],
+   "source": [
+    "vidas = 2\n",
+    "numero_random = random.randint(1,5)\n",
+    "print(numero_random)\n",
+    "\n",
+    "while vidas > 0:\n",
+    "    numero_usuario = input (\"Adivina el número del 1 al 5\")\n",
+    "    print(numero_usuario)\n",
+    "    if numero_random == numero_usuario:\n",
+    "        print(\"Correcto!! Has acertado el número\")\n",
+    "    else:\n",
+    "        vidas = vidas - 1\n",
+    "        print(\"Respuesta incorrecta, te quedan\", vidas, \"vidas\")"
+   ]
   },
   {
    "cell_type": "code",
